# sync

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  Doxyfile  Makefile.am  README  bootstrap  configure.ac  flake.nix
contrib/: Makefile.am  sync-dbconfig  taler-sync-dbconfig
debian/: .gitignore  changelog  control  libsync-dev.install  libsync.install  rules  sync-httpd.README.Debian  sync-httpd.config  sync-httpd.install  sync-httpd.postinst  sync-httpd.postrm  sync-httpd.preinst  sync-httpd.prerm  sync-httpd.service  sync-httpd.tmpfiles
debian/db/install/: pgsql
debian/etc/apache2/sites-available/: sync.conf
debian/etc/nginx/sites-available/: sync
debian/etc/sync/: sync.conf
debian/etc/sync/secrets/: sync-db.secret.conf
debian/po/: POTFILES.in
debian/upstream/: metadata
doc/: Makefile.am
m4/: libgnurl.m4
src/: Makefile.am
src/include/: Makefile.am  platform.h  sync_database_lib.h  sync_database_plugin.h  sync_service.h  sync_testing_lib.h  sync_util.h
src/lib/: .gitignore  Makefile.am  sync_api_curl_defaults.c  sync_api_curl_defaults.h  sync_api_download.c  sync_api_upload.c  test_sync_api.c  test_sync_api.conf  testing_api_cmd_backup_download.c  testing_api_cmd_backup_upload.c  testing_api_helpers.c  testing_api_trait_account_priv.c  testing_api_trait_account_pub.c  testing_api_trait_hash.c
src/lib/test_sync_api_home/.config/taler/exchange/: account-2.json
src/lib/test_sync_api_home/.local/share/taler/auditor/offline-keys/: auditor.priv
src/lib/test_sync_api_home/.local/share/taler/auditors/: auditor.out
src/lib/test_sync_api_home/.local/share/taler/exchange/live-keys/denomkeys/EUR_0_01-G06NP4M2EJCVJAZ1P5BM/: 1574546726000000  1575151226000000  1575755726000000  1576360226000000  1576964726000000  1577569226000000  1578173726000000  1578778226000000  1579382726000000  1579987226000000  1580591726000000  1581196226000000  1581800726000000  1582405226000000  1583009726000000  1583614226000000  1584218726000000  1584823226000000  1585427726000000  1586032226000000  1586636726000000  1587241226000000  1587845726000000  1588450226000000  1589054726000000  1589659226000000  1590263726000000  1590868226000000  1591472726000000  1592077226000000  1592681726000000  1593286226000000  1593890726000000
src/lib/test_sync_api_home/.local/share/taler/exchange/live-keys/denomkeys/EUR_0_1-V0HADRAEFKQ3N2YN2720/: 1574546726000000  1575151226000000  1575755726000000  1576360226000000  1576964726000000  1577569226000000  1578173726000000  1578778226000000  1579382726000000  1579987226000000  1580591726000000  1581196226000000  1581800726000000  1582405226000000  1583009726000000  1583614226000000  1584218726000000  1584823226000000  1585427726000000  1586032226000000  1586636726000000  1587241226000000  1587845726000000  1588450226000000  1589054726000000  1589659226000000  1590263726000000  1590868226000000  1591472726000000  1592077226000000  1592681726000000  1593286226000000  1593890726000000
src/lib/test_sync_api_home/.local/share/taler/exchange/live-keys/denomkeys/EUR_1-9EJZYC2VQ92ZY19Z3F71/: 1574546726000000  1575151226000000  1575755726000000  1576360226000000  1576964726000000  1577569226000000  1578173726000000  1578778226000000  1579382726000000  1579987226000000  1580591726000000  1581196226000000  1581800726000000  1582405226000000  1583009726000000  1583614226000000  1584218726000000  1584823226000000  1585427726000000  1586032226000000  1586636726000000  1587241226000000  1587845726000000  1588450226000000  1589054726000000  1589659226000000  1590263726000000  1590868226000000  1591472726000000  1592077226000000  1592681726000000  1593286226000000  1593890726000000
src/lib/test_sync_api_home/.local/share/taler/exchange/live-keys/denomkeys/EUR_5-5JB5S1XBPG62JD2PTYWT/: 1574546726000000  1575151226000000  1575755726000000  1576360226000000  1576964726000000  1577569226000000  1578173726000000  1578778226000000  1579382726000000  1579987226000000  1580591726000000  1581196226000000  1581800726000000  1582405226000000  1583009726000000  1583614226000000  1584218726000000  1584823226000000  1585427726000000  1586032226000000  1586636726000000  1587241226000000  1587845726000000  1588450226000000  1589054726000000  1589659226000000  1590263726000000  1590868226000000  1591472726000000  1592077226000000  1592681726000000  1593286226000000  1593890726000000
src/lib/test_sync_api_home/.local/share/taler/exchange/live-keys/signkeys/: 1574546726000000  1576965926000000  1579385126000000  1581804326000000  1584223526000000  1586642726000000  1589061926000000  1591481126000000  1593900326000000
src/lib/test_sync_api_home/.local/share/taler/exchange/wirefees/: x-taler-bank.fee
src/sync/: Makefile.am  sync-httpd.c  sync-httpd.h  sync-httpd_backup.c  sync-httpd_backup.h  sync-httpd_backup_post.c  sync-httpd_config.c  sync-httpd_config.h  sync-httpd_mhd.c  sync-httpd_mhd.h  sync-httpd_parsing.c  sync-httpd_parsing.h  sync-httpd_responses.c  sync-httpd_responses.h  sync-httpd_terms.c  sync-httpd_terms.h  sync.conf
src/syncdb/: .gitignore  Makefile.am  drop.sql  drop0001.sql  plugin_sync_postgres.c  plugin_syncdb_postgres.c  sync-0001.sql  sync-dbinit.c  sync_db_plugin.c  sync_db_postgres.conf  test_sync_db.c  test_sync_db_postgres.conf
src/testing/: .gitignore  Makefile.am  test_sync_api.c  test_sync_api.conf  testing_api_cmd_backup_download.c  testing_api_cmd_backup_upload.c  testing_api_trait_account_pub.c
src/testing/test_sync_api_home/.config/taler/merchant/: account-3.json
src/testing/test_sync_api_home/.local/share/taler/exchange-offline/: master.priv
src/testing/test_sync_api_home/.local/share/taler/exchange/wirefees/: x-taler-bank.fee
src/util/: .gitignore  Makefile.am  os_installation.c  paths.conf  sync-config  sync-config.c  sync-config.in
